# reserve-surf-prod

./: vercel.json
frontend/src/types/: onboarding.ts
reserve-surf-production/: README.md  package-lock.json  package.json
reserve-surf-production/backend/: env.example  main.py  pyproject.toml
reserve-surf-production/backend/apps/api/: urls.py
reserve-surf-production/backend/apps/core/: urls.py
reserve-surf-production/backend/apps/users/: urls.py
reserve-surf-production/backend/config/: settings.py  urls.py
reserve-surf-production/frontend/: components.json  index.html  package-lock.json  package.json  vite.config.ts
reserve-surf-production/frontend/src/: App.tsx  index.css
reserve-surf-production/frontend/src/components/: AppSidebar.tsx  DashboardLayout.tsx  Footer.tsx  LoginForm.tsx  MobileNavigation.tsx  NavMain.tsx  NavUser.tsx  ProtectedRoute.tsx  ThemeDemo.tsx
reserve-surf-production/frontend/src/contexts/: AuthContext.tsx
reserve-surf-production/frontend/src/hooks/: useAccessibility.ts  useOnboardingForm.ts
reserve-surf-production/frontend/src/lib/: accessibility.ts
reserve-surf-production/frontend/src/pages/: BookingConfirmation.tsx  BookingDetails.tsx  BookingGear.tsx  BookingPayment.tsx  BusinessLanding.tsx  CalendarView.tsx  ClientLanding.tsx  CustomerCRM.tsx  Equipment.tsx  LandingPage.tsx  LoginPage.tsx  MobileCheckin.tsx  Notifications.tsx  OperatorDashboard.tsx  OperatorLogin.tsx  Pricing.tsx  Reports.tsx  SessionExpired.tsx  Settings.tsx  StaffManagement.tsx  Weather.tsx
reserve-surf-production/frontend/src/types/: onboarding.ts
(+61 files in other folders)
